<resources>
    <string name="app_name" translatable="false">AsilApp</string>
    <string name="serverErrorTitle">Errore server</string>
    <string name="serverError">Si prega di riprovare più tardi</string>
    <string name="nullValue">Non specificato</string>
    <string name="genericErrorTitle">Errore</string>
    <string name="genericError">Si è verificato un errore inatteso</string>
    <string name="share">Condividi</string>
    <string name="cancel">Annulla</string>
    <string name="open">Apri</string>
    <string name="connection">Connessione</string>
    <string name="edit">Modifica</string>
    <string name="exit">Esci</string>
    <string name="iAmLoading">Sto caricando</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="add">Aggiungi</string>
    <string name="food">Cibo</string>
    <string name="drugs">Farmaci</string>
    <string name="other">Altro</string>
    <string name="evaluate">Valuta</string>
    <string name="save">Salva</string>
    <string name="send">Invia</string>
    <string name="successfullySaved">Salvataggio effettuato con successo</string>
    <string name="delete">Elimina</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="selectAll">Seleziona tutto</string>
    <string name="noConnectionTitle">Nessuna connessione a Internet</string>
    <string name="noConnection">Il tuo dispositivo non risulta connesso ad una rete Internet.
    Questo fa sì che l\'app non riesca a poter garantire il supporto a tutte le funzionalità normalmente previste.
    Si prega di connettersi ad una rete mobile o Wifi.</string>
    <string name="user">Utente</string>
    <string name="loginFragmentTitle" translatable="false">Login</string>
    <string name="usernameEmpty">Inserisci il nome utente</string>
    <string name="passwordEmpty">Inserisci la password</string>
    <string name="usernameAndPasswordEmpty">Inserisci il nome utente e la password</string>
    <string name="successfulLogin">Login effettuato con successo</string>
    <string name="loginFragmentProfLabel">Login Professore</string>
    <string name="loginButtonLabel">Login</string>
    <string name="loginRegistrationButtonLabel">Registrati</string>
    <string name="loginRegistrationLabel">Non hai un account? Registrati</string>
    <string name="usernamePlaceholder">Nome utente</string>
    <string name="passwordPlaceholder">Password</string>
    <string name="noConnectionTitleLogin">Impossibile effettuare il login</string>
    <string name="noConnectionLogin">Non puoi effettuare il login in quanto non sei connesso ad una rete Internet.</string>
    <string name="orText">Oppure</string>
    <string name="nameSignupText">Nome</string>
    <string name="registrationCompleteError">Qualcosa è andato storto :(</string>
    <string name="returnBack">Ritorna indietro</string>
    <string name="surnameSignupText">Cognome</string>
    <string name="birthDateSignupText">Data di nascita</string>
    <string name="usernameSignupText">Nome utente</string>
    <string name="passwordSignupText">Password</string>
    <string name="nextButton">Prossimo ➤</string>
    <string name="registrationComplete">Registrazione Completata!</string>
    <string name="returnLoginButton">Accedi</string>
    <string name="male">Maschio</string>
    <string name="female">Femmina</string>
    <string name="otherGender">Altro</string>
    <string name="genderSignupText">Sesso</string>
    <string name="citizenSignupText">Cittadinanza</string>
    <string name="countrySignupText">Paese di provenienza</string>
    <string name="personalData">1. Dati personali</string>
    <string name="placeData">2. Dati di provenienza</string>
    <string name="typeUserSignupText">Tipo di utente</string>
    <string name="cityOrganizationSignupText">Città</string>
    <string name="nameOrganizationSignupText">Struttura</string>
    <string name="organizationData">3. Dati della struttura di accoglienza</string>
    <string name="loginData">4. Dati di accesso</string>
    <string name="mandatoryFields">Tutti i campi sono obbligatori</string>
    <string name="asylumUser">Richiedente asilo</string>
    <string name="internationalUser">Protezione internazionale</string>
    <string name="passwordRegexOk">La password rispetta i criteri</string>
    <string name="passwordRegexError">La password non rispetta i criteri</string>
    <string name="passwordExplantationTitle">Criteri di sicurezza per le password</string>
    <string name="passwordExplanation">Una password viene considerata sicura quando contiene almeno 8 caratteri. Di questi, ci devono
    essere almeno una lettera maiuscola, una lettera minuscola, un numero e un carattere speciale (#\?!\@$%^&amp;*-).</string>
    <string name="ageLess18">Per registrarti devi avere almeno 18 anni!</string>
    <string name="regstrationComplete">Registrazione Completata!</string>
    <string name="userAlreadyExists">Username non disponibile</string>
    <string name="insertUserFailed">Inserimento dell\'utente fallito</string>
    <string name="noUserExists">Non esiste nessun utente con questo username</string>
    <string name="passwordDoNotMatchRegEx">Password non rispetta i criteri</string>
    <string name="usernameAvailable">Username disponibile</string>
    <string name="wrongPassword">Password errata!</string>
    <string name="loginCompleted">Login completato!</string>
    <string name="authFailed">Autenticazione Fallita, Rifare il login</string>
    <string name="authSuccess">Autenticazione avvenutacon successo!</string>
    <string name="qrStoreError">Errore nella memorizzazione del QR sul Database</string>
    <string name="qrReadError">Errore nella lettura del QR dal Database</string>
    <string name="qrGenerateError">Errore nella generazione del QR code</string>
    <string name="insertMisurationFailed">Inserimento della misurazione fallito</string>
    <string name="misurationStoredSuccessfully">Misurazione memorizzata correttamente</string>
    <string name="misurationGetSuccessfully">Misurazione letta con successo</string>
    <string name="misurationGetFailed">Errore nella lettura della misurazione</string>
    <string name="changeResidenceError">Errore nel cambio della residenza</string>
    <string name="changeResidenzaSuccessfully">Cambio di residenza avvenuto con successo</string>
    <string name="logoutSuccessfull">Logout eseguito correttamente</string>
    <string name="cityError">Errore nella lettura della citta</string>
    <string name="editPasswordFailed">Errore nella modifica della password</string>
    <string name="editPasswordSuccessfull">Password modificata con successo</string>
    <string name="patologiesGetFailed">Lettura delle patologie fallita</string>
    <string name="patologiesGetSuccessfull">Lettura delle patologie avvenuta con successo</string>
    <string name="insertPatologyFailed">Inserimento della patologia fallito</string>
    <string name="insertPatologySuccessfull">Inserimento della patologia avvenuto con succecsso</string>
    <string name="misurationEditSuccessfull">Modifica della misurazione avvenuta correttamente</string>
    <string name="misurationEditFailed">Modifica della misurazione fallita</string>
    <string name="insertFarmacoSuccessfull">Farmaco inserito correttamente</string>
    <string name="insertFarmacoFailed">Errore nell\'inserimento del farmaco</string>
    <string name="getFarmaciSuccessfull">Farmaci caricati con successo</string>
    <string name="getFarmaciFailed">Errore nel caricaemtno dei farmaci</string>
    <string name="deleteFarmacoSuccessfull">Farmaco eliminato correttamente</string>
    <string name="deleteFarmacoFailed">Errore nell\'eliminazione del farmaco</string>
    <string name="editPatologyFailed">Modifica della patologia fallita</string>
    <string name="editPatologySuccessfull">Modifica della patologia avvenuta con successo</string>
    <string name="getVideoSuccessfull">Video letto con successo</string>
    <string name="getVideoFailed">Fallimento nella lettura del video</string>
    <string name="getArticlesSuccessfull">Articoli letti con successo</string>
    <string name="getArticlesFailed">Fallimento nella lettura dell\'articolo</string>
    <string name="getSpeseFailed">Fallimento nella lettura elle spese</string>
    <string name="getSpeseSuccessfull">Spese lette con successo</string>
    <string name="storeSpesaFailed">Fallimento nella memorizzazione della spesa</string>
    <string name="storeSpesaSuccessfull">Spesa memorizzata con successo</string>
    <string name="misurationStoredDB">Misurazione memorizzata sul database correttamente</string>
    <string name="healthMenuScreen">Salute</string>
    <string name="homeMenuScreen">Home</string>
    <string name="userMenuScreen">Utente</string>
    <string name="healthBoxMenuScreen">Scatola Salute</string>
    <string name="settingsMenuScreen">Impostazioni</string>
    <string name="positionMenuScreen">Posizione</string>
    <string name="welcome">Benvenuto</string>
    <string name="video">Video</string>
    <string name="tips">Consigli</string>
    <string name="outgoingsManagement">Gestione spesa</string>
    <string name="usefulPhoneNumbers">Numeri utili</string>
    <string name="emergencyNumber">Numero di emergenza nazionale</string>
    <string name="emergencyNumberUnhcr" translatable="false">UNHCR (The Un Refugee Agency)</string>
    <string name="emergencyNumberCommission">Commissione per il diritto di asilo</string>
    <string name="healthHistory">Storico salute</string>
    <string name="myPathologies">Le mie patologie</string>
    <string name="temperatureHealthHistory">Temperatura corporea️</string>
    <string name="bloodPressureHealthHistory">Pressione sanguigna</string>
    <string name="weightHealthHistory">Peso corporeo</string>
    <string name="bpmHealthHistory">Battico cardiaco</string>
    <string name="evalutationHealthHistoryLabel">Valutazione:</string>
    <string name="tremblingHealthHistory">Tremolio</string>
    <string name="glucoseHealthHistory">Glucosio</string>
    <string name="lastRecordHealtHistory">Ultima rilevazione</string>
    <string name="dateLastRecordHealthHistoryShare">Data</string>
    <string name="timeLastRecordHealthHistoryShare">Ora</string>
    <string name="valueLastRecordHealthHistoryShare">Valore registrato</string>
    <string name="evalutationHealthHistoryShare">Valutazione</string>
    <string name="doctorNotesLastRecordHealthHistoryShare">Note del medico</string>
    <string name="dateLastVisitMyPathologiesShare">Data</string>
    <string name="timeLastVisitMyPathologiesShare">Ora</string>
    <string name="priorityLastVisitMyPathologiesShare">Priorità</string>
    <string name="doctorNotesLastVisitMyPathologiesShare">Note del medico</string>
    <string name="idLastRecordHealthHistoryShare" translatable="false">ID</string>
    <string name="typeHealthHistory">Tipo di registrazione</string>
    <string name="evalutationHealthHistoryValueGood">Buono 🟢</string>
    <string name="evalutationHealthHistoryValueFairlyGood">Discreto 🟠</string>
    <string name="evalutationHealthHistoryValueNotGood">Cattivo 🔴</string>
    <string name="chooseEvalutationHealthHistory">Scegli la valutazione</string>
    <string name="choosePriorityMyPathologies">Scegli la priorità</string>
    <string name="priorityMyPathologiesValueLow">Bassa 🟢</string>
    <string name="priorityMyPathologiesValueMedium">Media 🟠</string>
    <string name="priorityMyPathologiesValueHigh">Elevata 🔴</string>
    <string name="profileUserName">Nome</string>
    <string name="profileUserSurname">Cognome</string>
    <string name="profileUserGender">Genere</string>
    <string name="profileUserBirthDate">Data di Nascita</string>
    <string name="profileUserCitizen">Cittadinanza</string>
    <string name="profileUserCountry">Paese di Origine</string>
    <string name="profileUserResidence">Residenza</string>
    <string name="doctor">Dottore</string>
</resources>