<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <CheckBox
        android:id="@+id/dialogShareDetailHistoryId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idLastRecordHealthHistoryShare"/>

    <CheckBox
        android:id="@+id/dialogShareDetailHistoryDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateLastRecordHealthHistoryShare"/>

    <CheckBox
        android:id="@+id/dialogShareDetailHistoryTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeLastRecordHealthHistoryShare"/>

    <CheckBox
        android:id="@+id/dialogShareDetailHistoryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valueLastRecordHealthHistoryShare"/>

    <CheckBox
        android:id="@+id/dialogShareDetailHistoryEvalutation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evalutationHealthHistoryShare"/>
    <CheckBox
        android:id="@+id/dialogShareDetailHistoryDoctorNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctorNotesLastRecordHealthHistoryShare"/>
</LinearLayout>