<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <CheckBox
        android:id="@+id/checkboxSummaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeHealthHistory"/>

    <CheckBox
        android:id="@+id/checkboxSummaryEvalutation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evalutationHealthHistoryShare"/>

    <CheckBox
        android:id="@+id/checkboxSummaryValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valueLastRecordHealthHistoryShare"/>

</LinearLayout>