<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/layoutEditEvalutation"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="@dimen/widthEditEvalutation"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/titillium_web_bold"
            android:text="@string/chooseEvalutationHealthHistory" />


        <RadioGroup
            android:id="@+id/evalutationHealthHistoryRadioGroup"
            android:layout_width="@dimen/widthEditEvalutation"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:id="@+id/healthHistoryGood"
                android:layout_height="wrap_content"
                android:text="@string/evalutationHealthHistoryValueGood"
                app:buttonTint="@color/colorAccent" />

            <RadioButton
                android:layout_width="wrap_content"
                android:id="@+id/healthHistoryFairlyGood"
                android:layout_height="wrap_content"
                android:text="@string/evalutationHealthHistoryValueFairlyGood"
                app:buttonTint="@color/colorAccent" />

            <RadioButton
                android:id="@+id/healthHistoryNotGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evalutationHealthHistoryValueNotGood"
                app:buttonTint="@color/colorAccent" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="@dimen/widthEditEvalutation"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/evalutationHealthHistoryButtonCancel"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorDialogButton"
                android:textColor="@color/black"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/evalutationHealthHistoryButtonSend"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="@color/colorDialogButton"
                android:text="@string/send" />

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarEditEvalutation"
        android:layout_width="50dp"
        android:visibility="gone"
        android:layout_marginLeft="100dp"
        android:indeterminateTint="@color/appMainColor"
        android:layout_marginTop="100dp"
        android:layout_gravity="left"
        android:layout_height="50dp"/>

</FrameLayout>